migrate the API to use to CompletableFuture's
- APIError now is an actual Exception
- Add better error handling to RequestHandler's